 - Added ConnectorService, LocalService, LogService and StatusService to org.restlet.util and as Application properties.
 - Renamed org.restlet.util.ClientInterface into VirtualClient.
 - Replaced Protocol.CONTEXT by Protocol.CLAP (ClassLoader Access Protocol) and WAR (Web Application).
 - Replaced ContextReference by ClapReference.
 
[Other changes] 
 - Updated Jetty 6 extension to 6.0.1 release and Jetty 5 extension to 5.1.11 release.
 - Added Resource.setVariants() and setIdentifiers() methods. Can be easier than doing a getVariants().clear() then a getVariants().addAll(newList). 
   Suggested by Chris Winters.
 - org.restlet.ReferenceList now derives from WrapperList<Reference> to factorize code and to clarify (in Javadocs) which extra methods are provided.
 - Improved Javadocs for the org.restlet.Handler class to explain what is the default behavior of each handle*() method. 
 - Refactored all HTTP client and server classes to work with the new call converter mechanism.
 - Renamed AbstractHttpServer to HttpServer, AbstractHttpServerCall to HttpServerCall and AbstractHttpClientCall to HttpClientCall.
 - Merged HttpCall interface and DefaultHttpCall class into single HttpCall class.
 - Added com.noelios.restlet.connector.HttpServerConverter as the base call converter (from HTTP calls to uniform REST calls).
 - Refactored the HttpUrlConnection-based HTTP client to extract a generic HttpClientConverter and added a base HttpClient class.
 - Added support of HTTP headers in high-level calls. The headers are available in Request|Response.getAttributes().get("org.restlet.http.
   headers") as an instance of ParameterList. Additional headers can also be added by setting a "org.restlet.http.headers" 
   attribute in Request or Response. Note that only non-standard HTTP headers are allowed to be added to prevent conflicts with the connector's behavior.
 - Added sample application illustrating the access raw HTTP headers. Used suggestion from John D. Mitchell.