@@ -77,7 +77,7 @@ public class HttpResponse extends Response
 		{
 			result.setAddress(httpCall.getServerAddress());
 			result.setAgent(Factory.VERSION_HEADER);
-			result.setName(httpCall.getServerName());
+			result.setDomain(httpCall.getServerDomain());
 			result.setPort(httpCall.getServerPort());
 			this.serverAdded = true;
 		}
